assert(static_cast<T1>(result) == thing) with ctw

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 22
    • Affects Version/s: 22
    • Component/s: hotspot
    • 22
    • b03

      Running ctw with https://repo1.maven.org/maven2/net/codebuilders/unoil/4.1.6/unoil-4.1.6.jar I get:

      # Internal Error (/home/roland/jdk-jdk/src/hotspot/share/utilities/globalDefinitions.hpp:522), pid=3554522, tid=3554523
      # assert(static_cast<T1>(result) == thing) failed: must be

        [libjvm.so+0xdb4569] signed char checked_cast<signed char, int>(int)+0x40 (globalDefinitions.hpp:522)
      V [libjvm.so+0xd9ffe8] initialize_static_primitive_field(fieldDescriptor*, Handle)+0xde (javaClasses.cpp:820)
      V [libjvm.so+0xda02b2] initialize_static_field(fieldDescriptor*, Handle, JavaThread*)+0xc9 (javaClasses.cpp:854)
      V [libjvm.so+0xd5d97d] InstanceKlass::do_local_static_fields(void (*)(fieldDescriptor*, Handle, JavaThread*), Handle, JavaThread*)+0xa9 (instanceKlass.cpp:1717)
      V [libjvm.so+0xda0721] java_lang_Class::initialize_mirror_fields(Klass*, Handle, Handle, Handle, JavaThread*)+0x6f (javaClasses.cpp:918)
      V [libjvm.so+0xda0f41] java_lang_Class::allocate_mirror(Klass*, bool, Handle, Handle, Handle&, Handle&, JavaThread*)+0x473 (javaClasses.cpp:1017)
      V [libjvm.so+0xda10da] java_lang_Class::create_mirror(Klass*, Handle, Handle, Handle, Handle, JavaThread*)+0x168 (javaClasses.cpp:1047)
      V [libjvm.so+0x8c25c4] ClassFileParser::fill_instance_klass(InstanceKlass*, bool, ClassInstanceInfo const&, JavaThread*)+0xf9c (classFileParser.cpp:5344)
      V [libjvm.so+0x8c15a4] ClassFileParser::create_instance_klass(bool, ClassInstanceInfo const&, JavaThread*)+0xac (classFileParser.cpp:5168)
      V [libjvm.so+0x107da41] KlassFactory::create_from_stream(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const&, JavaThread*)+0x283 (klassFactory.cpp:204)
      V [libjvm.so+0x1580790] SystemDictionary::resolve_class_from_stream(ClassFileStream*, Symbol*, Handle, ClassLoadInfo const&, JavaThread*)+0x144 (systemDictionary.cpp:888)
      V [libjvm.so+0x1580a4a] SystemDictionary::resolve_from_stream(ClassFileStream*, Symbol*, Handle, ClassLoadInfo const&, JavaThread*)+0x6c (systemDictionary.cpp:926)
      V [libjvm.so+0xec52b7] jvm_define_class_common(char const*, _jobject*, signed char const*, int, _jobject*, char const*, JavaThread*)+0x241 (jvm.cpp:896)
      V [libjvm.so+0xec5f88] JVM_DefineClassWithSource+0x9c (jvm.cpp:1060)
      C [libjava.so+0xd885] Java_java_lang_ClassLoader_defineClass1+0x205 (ClassLoader.c:139)

      It happens following JDK-8309692.

            Assignee:
            Coleen Phillimore
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: