8310297: assert(static_cast<T1>(result) == thing) with ctw

Reviewed-by: iklam, dholmes